--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -6,11 +6,11 @@
 }
 
 .Body {
-  min-height: 50vh;
+  min-height: 60vh;
   width: 80%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  margin-top: 2vh;
   overflow-y: hidden;
   overflow-x: hidden;
 }
